<resources>
    <string name="app_name">Insight</string>
    <string name="scroll_view_modules">Insight</string>
    <string name="settings">Insight</string>
    <string name="gauge">GAUGE</string>
    <string name="timing">TIMING</string>
    <string name="perception">PERCEPTION</string>
    <string name="timesheets">TIMESHEETS</string>
    <string name="snapshot">SNAPSHOT</string>
    <string name="kies_een_meting">Kies een meting</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="disturbance">DISTURBANCE</string>
    <string name="profielfoto" />
    <string name="meting_instellen">Meting Instellen</string>
    <string name="naam_meting">naam meting</string>
    <string name="projectnaam">projectnaam</string>
    <string name="omgeving">omgeving</string>
    <string name="template">template</string>
    <string name="interval">interval</string>
    <string name="optioneel">optioneel</string>
    <string name="vul_in">vul in</string>
    <string name="hourPicker">uu</string>
    <string name="secondsPicker">ss</string>
    <string name="minutesPicker">mm</string>
    <string name="voorbereiding">voorbereiding</string>
    <string name="meting">meting</string>
    <string name="resultaten">resultaten</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nieuwe_template">Nieuwe template</string>
    <string name="template_2">Template 2</string>
    <string name="template_1">Template 1</string>
    <string name="templates">templates</string>
    <string name="voorbereiding_headertext">Voorbereiding</string>
    <string name="title_activity_meting">MetingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="werkwoorden">werkwoorden</string>
    <string name="stoppen">stoppen</string>
    <string name="wachten">Wachten</string>
    <string name="overleggen">Overleggen</string>
    <string name="bewegen">Bewegen</string>
    <string name="zoeken">Zoeken</string>
    <string name="werkwoord">Werkwoord</string>
    <string name="transporteren">Transporteren</string>
    <string name="lezen">Lezen</string>
    <string name="produceren">Produceren</string>
    <string name="administreren">administreren</string>
    <string name="omstellen">omstellen</string>
    <string name="opruimen">opruimen</string>
    <string name="herstellen">herstellen</string>
    <string name="demonteren">demonteren</string>
    <string name="_00_00_2021">00-00-2021</string>
    <string name="meting_opslaan">Meting opslaan</string>
    <string name="naam">naam</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="opslaan">opslaan</string>
    <string name="verwijderen">verwijderen</string>
    <string name="structuur">structuur</string>
    <string name="taken">Taken</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_00">00:00</string>
</resources>