<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".disturbanceFragmentVoorbereiding" >

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034">

        <TextView
            android:id="@+id/metingInstellen"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/roboto"
            android:text="@string/voorbereiding_headertext"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="421dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:autoSizeMinTextSize="18dp"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:text="@string/templates" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/vak_template"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/naamMeting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="18dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_vertical"
                android:text="@string/template_1"
                android:textColor="#868686"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/vak_template"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/templateTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="18dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_vertical"
                android:text="@string/template_2"
                android:textColor="#868686"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nieuwTemplateDisturbance"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/vak_template"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nieuwTemplate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="18dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_vertical"
                android:text="@string/nieuwe_template"
                android:textColor="#868686"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/afgerondeTellingToevoegen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:background="#00FFFFFF"
                android:src="@drawable/add" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>